crates/rolldown/tests/esbuild/packagejson/package_json_syntax_error_trailing_comma/artifacts.snap
---
source: crates/rolldown_testing/src/integration_test.rs
---
# Errors

## RESOLVE_ERROR

```text
[RESOLVE_ERROR] Error: Could not resolve 'demo-pkg' in src/entry.js
   ╭─[src/entry.js:1:16]
   │
 1 │ import fn from 'demo-pkg'
   │                ─────┬────  
   │                     ╰────── JSON parse error
───╯

```
